--- a/app/views/nytimes_newswire/index.html.erb
+++ b/app/views/nytimes_newswire/index.html.erb
@@ -2,10 +2,12 @@
 <% @articles.each do |article| %>
     <ul>
         <li><%= article[:title] %></li>
-        <li><%= article[:url] %></li>
+        <li><%= article[:byline] %></li>
         <li><%= article[:abstract] %></li>
+        <li><%= link_to "View full article", article[:url]  %></li>
         <li><%= article[:geo_facet] %></li>
+        <li><%= image_tag article[:thumbnail_standard] %></li>
 
-        <li><%#= article %></li>
+        <li><%= article %></li>
     </ul>
 <% end %>
