--- a/app/views/nytimes_newswire/index.html.erb
+++ b/app/views/nytimes_newswire/index.html.erb
@@ -1,4 +1,4 @@
-<h1>NYTimes NewsWire</h1>
+<h1>NewsWire</h1>
 <% @articles.each do |article| %>
     <h3><a href="#" data-reveal-id="a-<%= article[:title].parameterize %>"><%= article[:title] %></a></h3>
     <p><%= article[:geo_facet] %></p>
@@ -16,9 +16,7 @@
           <p><%= article[:multimedia].last[:caption] %></p>
       <% end %>
 
-      <%= image_tag("https://maps.googleapis.com/maps/api/staticmap?center=#{article[:geo_facet]}&zoom=4&size=600x300&maptype=hybrid&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C#{article[:geo_facet]}&key=#{ENV['google_static_maps_api_key']}") %>
-
-      <!--map = GoogleStaticMap.new(:zoom => 11, :center => MapLocation.new(:address => "Washington, DC"))-->
+      <%= image_tag("https://maps.googleapis.com/maps/api/staticmap?center=#{article[:geo_facet]}&zoom=4&size=300x300&maptype=hybrid&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C#{article[:geo_facet]}&key=#{ENV['google_static_maps_api_key']}") %>
 
       <p class="lead"><%= article[:abstract] %></p>
       <p><%= link_to "View Full Article", article[:url] %></p>
