--- a/app/views/nytimes_newswire/index.html.erb
+++ b/app/views/nytimes_newswire/index.html.erb
@@ -1,10 +1,14 @@
 <h1>NewsWire</h1>
 <% @articles.each do |article| %>
     <h3><a href="#" data-reveal-id="a-<%= article[:title].parameterize %>"><%= article[:title] %></a></h3>
-    <p><%= article[:geo_facet] %></p>
-    <%= image_tag article[:thumbnail_standard] %>
+    <% if article[:thumbnail_standard] != "" %>
+        <%= image_tag article[:thumbnail_standard] %>
+    <% else %>
+        <%= image_tag "busy-people-background.jpg", class: "thumbnail_image" %>
+    <% end %>
 
-    <p><%#= article[:multimedia] %></p>
+
+    <p><%= article %></p>
 
     <div id="a-<%= article[:title].parameterize %>" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
       <h3 id="modalTitle"><%= article[:title] %></h3>
@@ -14,6 +18,8 @@
       <% if article[:multimedia].class != String %>
         <%= image_tag article[:multimedia].last[:url]  %>
           <p><%= article[:multimedia].last[:caption] %></p>
+      <% else %>
+        <%= image_tag "busy-people-background.jpg", class: "story_image" %>
       <% end %>
 
       <%= image_tag("https://maps.googleapis.com/maps/api/staticmap?center=#{article[:geo_facet]}&zoom=4&size=300x300&maptype=hybrid&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C#{article[:geo_facet]}&key=#{ENV['google_static_maps_api_key']}") %>
