--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,17 +5,17 @@
 
         <h1><%= link_to "Where It Happens", root_path %></h1>
 
-        <h4>How much time do YOU have to waste?</h4>
 
       </div>
     </div>
     <ul class="subnav hide-for-small-only">
       <% if current_user %>
-        <li><%#= link_to "Authorize Twitter", '/users/auth/twitter' %></li>
+
         <li><%#= link_to "Authorize Instagram", '/users/auth/instagram' %></li>
         <li><%= link_to "Signout", destroy_user_session_path, method: :delete %></li>
       <% else %>
         <li><%= link_to "Sign In With Facebook", '/users/auth/facebook' %></li>
+        <li><%= link_to "Sign In With Twitter", '/users/auth/twitter' %></li>
       <% end %>
     </ul>
   </header>
