minor styling changes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,12 @@
 
 .headline {
     float: right;
+    display: block;
+}
+
+.byline {
+    float: right;
+    display: inline-block;
 }
 
 .thumbnail_image {
