--- a/app/views/nytimes_newswire/index.html.erb
+++ b/app/views/nytimes_newswire/index.html.erb
@@ -1,16 +1,41 @@
-<div class="medium-7 medium-centered columns">
-<h1>NewsWire</h1>
-<% @articles.each do |article| %>
-  <div>
-    <h4 class="headline"><a href="#" data-reveal-id="a-<%= article[:title].parameterize %>"><%= article[:title] %></a></h4><br>
-      <!--<p class="byline"><%#= article[:byline] %></p>-->
-    <% if article[:thumbnail_standard] != "" %>
-        <%= image_tag article[:thumbnail_standard], class: "thumbnail_image" %>
-    <% else %>
-        <%= image_tag "busy-people-background.jpg", class: "thumbnail_image" %>
-    <% end %>
+<div class="medium-10 medium-centered columns">
+  <div class="large-12 columns featured-story-wrapper">
+    <div class="large-10 large-centered columns featured-story-frame">
+      <div class="large-10 large-centered columns featured-story-title">
+        <h6><%= @articles.first[:title]  %></h6>
+        <p><%= @articles.first[:abstract] %></p>
+          <a href="#" data-reveal-id="a-<%= @articles.first[:title].parameterize %>", class="small button">View</a>
+      </div>
+    </div>
   </div>
 
+  <% @articles.each do |article| %>
+  <div class="card">
+    <% if article[:multimedia].class != String %>
+        <%= image_tag article[:multimedia].last[:url], class: "story_image"  %>
+        <p><%#= article[:multimedia].last[:caption] %></p>
+    <% else %>
+        <%= image_tag "busy-people-background.jpg", class: "story_image" %>
+    <% end %>
+
+    <%# if article[:thumbnail_standard] != "" %>
+        <%#= image_tag article[:thumbnail_standard], class: "thumbnail_image" %>
+    <%# else %>
+        <%#= image_tag "busy-people-background.jpg", class: "thumbnail_image" %>
+    <%# end %>
+
+    <div class="card-divider">
+      <p><a href="#" data-reveal-id="a-<%= article[:title].parameterize %>"><%= article[:title] %></a></p>
+    </div>
+    <div class="card-section">
+
+    </div>
+  </div>
+  <% end %>
+
+  <div class="card">
+    <% @articles.each do |article| %>
+  </div>
 
     <p><%#= article %></p>
 
@@ -25,8 +50,10 @@
       <% else %>
         <%= image_tag "busy-people-background.jpg", class: "story_image" %>
       <% end %>
+
       <% if article[:geo_facet] != "" %>
         <%= image_tag("https://maps.googleapis.com/maps/api/staticmap?center=#{article[:geo_facet]}&zoom=4&size=300x300&maptype=roadmap&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C#{article[:geo_facet]}&key=#{ENV['google_static_maps_api_key']}", class: "map_image") %>
+
       <% else %>
         <%= image_tag("https://maps.googleapis.com/maps/api/staticmap?center=unitedstates&zoom=1&size=300x300&maptype=hybrid&key=#{ENV['google_static_maps_api_key']}", class: "map_image") %>
       <% end %>
