--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,24 +39,38 @@
 .featured-story-title {
     height: 150px;
     padding-top: 25px;
-    padding-bottom: 25px;
     vertical-align: middle;
 }
 
+.newswire {
+    width: 100%;
+    height: 50px;
+    background-color: #666666;
+
+}
+
 .card {
-    background-color: dimgrey;
     height: 250px;
-    width: 450px;
+    width: 200px;
     display: inline-block;
     margin-top: 25px;
-    margin-bottom: 25px;
     margin-left: 25px;
     margin-right: 25px;
 }
 
 .card-divider {
+    background-color: #666666;
+    display: inline-block;
     height: 25px;
-    width: 450px;
+    width: 200px;
+}
+
+.card-section {
+    background-color: darkgrey;
+    display: inline-block;
+    height: 50px;
+    width: 200px;
+    overflow: hidden;
 }
 
 
@@ -76,7 +90,7 @@
 }
 
 .story_image {
-    height: 250px;
+    max-height: 250px;
     width: 450px;
     float: right;
 }
