--- a/app/views/nytimes_newswire/index.html.erb
+++ b/app/views/nytimes_newswire/index.html.erb
@@ -1,16 +1,24 @@
-<div class="medium-10 medium-centered columns">
+<div class="medium-12 medium-centered columns">
   <div class="large-12 columns featured-story-wrapper">
     <div class="large-10 large-centered columns featured-story-frame">
       <div class="large-10 large-centered columns featured-story-title">
-        <h6><%= @articles.first[:title]  %></h6>
+        <h4><%= @articles.first[:title]  %></h4>
         <p><%= @articles.first[:abstract] %></p>
-          <a href="#" data-reveal-id="a-<%= @articles.first[:title].parameterize %>", class="small button">View</a>
+          <a href="#" data-reveal-id="a-<%= @articles.first[:title].parameterize %>", class="tiny button">View</a>
       </div>
     </div>
   </div>
 
+  <div class="row">
+    <div class="large-12 large-centered columns newswire">
+        <h2>Newswire</h2>
+    </div>
+  </div>
+<div class="row">
+  <div class="large-10 large-centered columns">
   <% @articles.each do |article| %>
-  <div class="card">
+
+<div class="card">
     <% if article[:multimedia].class != String %>
         <%= image_tag article[:multimedia].last[:url], class: "story_image"  %>
         <p><%#= article[:multimedia].last[:caption] %></p>
@@ -18,17 +26,12 @@
         <%= image_tag "busy-people-background.jpg", class: "story_image" %>
     <% end %>
 
-    <%# if article[:thumbnail_standard] != "" %>
-        <%#= image_tag article[:thumbnail_standard], class: "thumbnail_image" %>
-    <%# else %>
-        <%#= image_tag "busy-people-background.jpg", class: "thumbnail_image" %>
-    <%# end %>
-
     <div class="card-divider">
-      <p><a href="#" data-reveal-id="a-<%= article[:title].parameterize %>"><%= article[:title] %></a></p>
+        <%= article[:section] %>
     </div>
-    <div class="card-section">
 
+    <div class="card-section">
+      <a href="#" data-reveal-id="a-<%= article[:title].parameterize %>"><%= article[:title] %></a>
     </div>
   </div>
   <% end %>
@@ -55,7 +58,7 @@
         <%= image_tag("https://maps.googleapis.com/maps/api/staticmap?center=#{article[:geo_facet]}&zoom=4&size=300x300&maptype=roadmap&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C#{article[:geo_facet]}&key=#{ENV['google_static_maps_api_key']}", class: "map_image") %>
 
       <% else %>
-        <%= image_tag("https://maps.googleapis.com/maps/api/staticmap?center=unitedstates&zoom=1&size=300x300&maptype=hybrid&key=#{ENV['google_static_maps_api_key']}", class: "map_image") %>
+        <%= image_tag("https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSWx_9W6XLlvIio7F5XaXNGiNeRmF1sU9-ZKN6oVNkAqcNzwwZd", class: "map_image") %>
       <% end %>
 
       <p class="lead"><%= article[:abstract] %></p>
@@ -63,4 +66,6 @@
       <a class="close-reveal-modal" aria-label="Close">&#215;</a>
     </div>
 <% end %>
+</div>
+</div>
 </div>
