--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,14 +28,11 @@
 
     <!-- Left Nav Section -->
     <ul class="left">
-      <li class="has-dropdown">
-        <a href="#">Sections</a>
-        <ul class="dropdown">
-          <li><a href="#">Section 1</a></li>
-          <li><a href="#">Section 2</a></li>
-          <li><a href="#">Section 3</a></li>
-        </ul>
-      </li>
+      <li><%= link_to "World", topworldstories_path %></li>
+      <li><%= link_to "Nation", topnationstories_path %></li>
+      <li><a href="#">Politics</a></li>
+      <li><a href="#">Business</a></li>
+      <li><a href="#">Technology</a></li>
     </ul>
   </section>
 </nav>
