--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,23 +19,57 @@
 /*Custom CSS*/
 /*Featured Article CSS*/
 .story-card {
-    background-image: url("busy-people-background.jpg");
+    /*background-image: url("busy-people-background.jpg");*/
     margin-top: 25px;
 
 }
 
 .story-header {
-    background-color: blue;
+    background-color: darkgrey;
     height: 50px;
+    margin-bottom: 5px;
 }
+
+h3 {
+    color: gainsboro;
+}
+
+@media only screen and (min-width: 40em) {
+    .top-bar {
+        text-align: center;
+    }
+
+    ul.center-buttons {
+        display: inline-block; }
+
+    .logo {
+        left: 5px;
+        top: -2px;
+        position: absolute; } }
+.logo {
+    max-width: 2rem;
+    margin-top: -3px;
+    margin-left: 5px; }
+
+.menu-icon {
+    padding-top: 1.2rem; }
+
+.top-bar.expanded {
+    background: #666666; }
+
+.logo {
+    margin-top: .5rem; }
+
 
 .story-wrapper {
     height: 200px;
+    margin-top: 5px;
 }
 
 .story-frame {
     background-color: grey;
     height: 200px;
+    margin-top: 5px;
 }
 
 .story-title {
@@ -43,16 +77,13 @@
 }
 
 .story-footer {
-    background-color: blue;
     height: 50px;
+    margin-top: 5px;
 }
 
-.story-photo {
-    height: 150px;
-    width: 100%;
-    background-color: gold;
-
-
+.story-map{
+    height: 200px;
+    margin-top: 5px;
 }
 
 .newswire {
@@ -103,7 +134,7 @@
 }
 
 .story_image {
-    max-height: 250px;
+    height: 200px;
     width: 450px;
     float: right;
 }
@@ -111,5 +142,10 @@
 .map_image {
     height: 200px;
     width: 440px;
+}
+
+.modal-map {
+    height: 400px;
+    width: 400px;
 }
 
