business technology and politic controllers views and routes added and wired

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,9 +30,9 @@
     <ul class="left">
       <li><%= link_to "World", topworldstories_path %></li>
       <li><%= link_to "Nation", topnationstories_path %></li>
-      <li><a href="#">Politics</a></li>
-      <li><a href="#">Business</a></li>
-      <li><a href="#">Technology</a></li>
+      <li><%= link_to "Politics", toppoliticstories_path %></li>
+      <li><%= link_to "Technology", toptechnologystories_path %></li>
+      <li><%= link_to "Business", topbusinessstories_path %></li>
     </ul>
   </section>
 </nav>
