--- a/app/views/nytimes_top_stories_politic/index.html.erb
+++ b/app/views/nytimes_top_stories_politic/index.html.erb
@@ -1,11 +1,11 @@
 <div class="row">
   <div class="large-12 large-centered columns">
-    <h1>Top National Stories</h1>
+    <h1>Top Political Stories</h1>
   </div>
 </div>
 
 
-<% @nation_articles.each do |article| %>
+<% @politic_articles.each do |article| %>
     <div class="story-card">
       <div class="row">
         <nav class="top-bar" data-topbar>
@@ -19,7 +19,6 @@
             </ul>
           </section>
         </nav>
-      </div>
       </div>
 
       <div class="row">
@@ -79,5 +78,5 @@
 <% end %>
 
 
-<%= @nation_articles %>
+
 
