--- a/app/views/nytimes_top_stories_world/index.html.erb
+++ b/app/views/nytimes_top_stories_world/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="large-12 large-centered columns">
-    <h1>Top Stories Across The World</h1>
+    <h1>Top World Stories</h1>
   </div>
 </div>
 
