--- a/app/views/nytimes_article_search/index.html.erb
+++ b/app/views/nytimes_article_search/index.html.erb
@@ -1,3 +1,91 @@
-<h1>Article Search Results</h1>
+<div class="row">
+  <div class="large-12 large-centered columns">
+    <h1>Article Search Results </h1>
+  </div>
+</div>
+
+
+<% @search_articles.each do |article| %>
+    <div class="story-card">
+      <div class="row">
+        <nav class="top-bar" data-topbar>
+          <div class="logo">
+            <a href="http://icons.iconarchive.com/icons/martz90/circle-addon1/512/new-york-times-icon.png"><img src="http://icons.iconarchive.com/icons/martz90/circle-addon1/512/new-york-times-icon.png" /></a>
+          </div>
+          <section class="top-bar-section">
+            <!-- Right Nav Section -->
+            <ul class="center-buttons">
+              <li><h3><strong><%= article[:headline][:print_headline]  %></strong></h3></li>
+            </ul>
+          </section>
+        </nav>
+      </div>
+
+      <div class="row">
+        <%# if article[:multimedia].class != String %>
+            <div class="large-4 columns story-wrapper">
+            <%#= image_tag article[:multimedia].last[:url], class: "story_image" %>
+              <%= article[:snippet] %>
+            </div>
+        <%# else %>
+            <div class="large-4 columns story-wrapper">
+            <%#= image_tag "busy-people-background.jpg", class: "story_image" %>
+            <%= article[:lead_paragraph] %>
+            </div>
+        <%# end %>
+
+        <div class="large-4 columns story-frame"><%= article[:abstract] %></div>
+        <div class="large-4 columns story-map">
+          <%# if article[:geo_facet] != "" %>
+              <%#= image_tag("https://maps.googleapis.com/maps/api/staticmap?center=#{article[:geo_facet]}&zoom=4&size=300x300&maptype=roadmap&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C#{article[:geo_facet]}&key=#{ENV['google_static_maps_api_key']}", class: "map_image") %>
+          <%# else %>
+              <%#= image_tag("https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSWx_9W6XLlvIio7F5XaXNGiNeRmF1sU9-ZKN6oVNkAqcNzwwZd", class: "map_image") %>
+          <%# end %>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="large-12 columns story-footer">
+          <div class="large-12 columns story-footer">
+            <div>
+              <nav class="top-bar" data-topbar role="navigation">
+                <section class="top-bar-section">
+                  <!-- Left Nav Section -->
+                  <ul class="left">
+                    <li><a href="#" data-reveal-id="a-<%#=  article[:web_url].parameterize %>">Read More</a></li>
+                    <li><a href="#" data-reveal-id="a-<%#=  article[:headline][:print_headline].parameterize %>">View Map</a></li>
+                    <li><a href="#">Tweet</a></li>
+                    <li><%= article[:section_name] %></li>
+                  </ul>
+                </section>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="a-<%#= article[:web_url].parameterize %>" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+      <h2 id="modalTitle"><%#= article[:headline][:print_headline] %></h2>
+      <p class="lead"></p>
+      <p>This is where the Full Article Text will appear</p>
+      <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+    </div>
+
+    <div id="a-<%#= article[:headline][:print_headline].parameterize %>" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+      <h2 id="modalTitle"><%#= article[:headline][:print_headline] %></h2>
+      <p class="lead"></p>
+      <%# if article[:geo_facet] != "" %>
+          <%#= image_tag("https://maps.googleapis.com/maps/api/staticmap?center=#{article[:geo_facet]}&zoom=4&size=300x300&maptype=roadmap&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C#{article[:geo_facet]}&key=#{ENV['google_static_maps_api_key']}", class: "modal-map") %>
+      <%# else %>
+          <%#= image_tag("https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSWx_9W6XLlvIio7F5XaXNGiNeRmF1sU9-ZKN6oVNkAqcNzwwZd", class: "modal-map") %>
+      <%# end %>
+      <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+    </div>
+<% end %>
+
+
+
+
 
 <%= @search_articles %>
