fixed read more button

--- a/app/assets/javascripts/newswire.js.erb
+++ b/app/assets/javascripts/newswire.js.erb
@@ -32,8 +32,8 @@ function getArticles() {
                             +"</div>"
                         +"</div>"
                         +"<div class='row'>"
-                            +"<div class='medium-2 columns newswire-link'>"
-                                +"<a href='"+story.url+"'>Read More</a>"
+                            +"<div>"
+                                +"<a class='button' href='"+story.url+"'>Read More</a>"
                             +"</div>"
                         +"</div>"
                         +"<hr>"
