--- a/app/views/nytimes_newswire/index.html.erb
+++ b/app/views/nytimes_newswire/index.html.erb
@@ -1,11 +1,9 @@
-<div class="row">
-  <div class="large-12 large-centered columns">
-    <h1>Current NewsWire</h1>
-  </div>
-</div>
+<section class="newswire-page">
+    <div class="row">
+        <div class="large-12 large-centered columns">
+            <h1>Current NewsWire</h1>
+        </div>
+    </div>
 
-<div id="newswire-article">
-
-</div>
-
-
+    <div id="newswire-article"></div>
+</section>
