--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= javascript_include_tag "newswire" %>
+    <%= javascript_include_tag "top_stories_business" %>
 
     <%= csrf_meta_tags %>
   </head>
