--- a/app/views/nytimes_newswire/index.html.erb
+++ b/app/views/nytimes_newswire/index.html.erb
@@ -1,7 +1,8 @@
 <section class="newswire-page">
     <div class="row">
         <div class="large-12 large-centered columns">
-            <h1>Current NewsWire</h1>
+          <h1>Current NewsWire</h1>
+          <a id='fetch-newswire-articles' class='button'>Fetch</a>
         </div>
     </div>
 
