--- a/app/assets/javascripts/newswire.js.erb
+++ b/app/assets/javascripts/newswire.js.erb
@@ -1,18 +1,27 @@
 $(document).ready(function(){
-    getNewswireArticles()
+    getNewswireArticles();
+    fetchNewswireArticlesButton()
 });
+
+function fetchNewswireArticlesButton() {
+    $("#fetch-newswire-articles").on("click", function() {
+        getNewswireArticles()
+    })
+}
 
 function getNewswireArticles() {
     $.ajax({
         type: "GET",
         url: "https://api.nytimes.com/svc/news/v3/content/all/all.json?api-key=<%= ENV["nytimes_newswire_api_key"]  %>",
+        dataType: "json",
+        async: true,
         success: function(articles){
             var stories = articles.results;
             $.each(stories, function(index, story){
-                var newArticleDate        = new Date(story.created_date);
-                var lastArticleDateString = $(".story").last().attr("created_date");
-                var lastArticleDate       = new Date(lastArticleDateString);
-                if (lastArticleDateString === undefined || newArticleDate > lastArticleDate) {
+                var newArticleDate        = story.created_date;
+                var lastArticleDate = $(".newswire-articles").last().data("created-date");
+
+                if (lastArticleDate === undefined || lastArticleDate > newArticleDate) {
                     renderNewswireStory(story)
                 }
             })
@@ -22,7 +31,7 @@ function getNewswireArticles() {
 
 function renderNewswireStory(story) {
     $("#newswire-article").append(
-            "<div class='newsline-articles'>"
+            "<div class='newswire-articles' data-created-date='"+story.created_date+"'>"
             +"<div class='row'>"
             +"<div class='medium-12 columns newswire-title'>"
             +"<h4>"+story.title+"</h4>"
@@ -45,7 +54,6 @@ function renderNewswireStory(story) {
             +"<div class='row'>"
             +"<div>"
             +"<a class='button' href='"+story.url+"'>Read More</a>"
-            +"</div>"
             +"</div>"
             +"<hr>"
             +"</div>"
