--- a/app/assets/javascripts/top_stories_world.js.erb
+++ b/app/assets/javascripts/top_stories_world.js.erb
@@ -3,28 +3,27 @@ $(document).ready(function(){
     fetchWorldArticlesButton()
 });
 
+function fetchWorldArticlesButton() {
+    $("#fetch-world-articles").on("click", function() {
+        getWorldArticles()
+    })
+}
+
 function getWorldArticles() {
     $.ajax({
         type: "GET",
-        dataType: 'json',
         url: "http://api.nytimes.com/svc/topstories/v1/world.json?api-key=<%= ENV["nytimes_top_stories_api_key"]  %>",
         success: function(articles){
             var stories = articles.results;
             $.each(stories, function(index, story){
                 var newArticleDate        = story.created_date;
-                var lastArticleDateString = $("#top-stories-world-articles").last().children().first().data("created-date");
-                var lastArticleDate       = lastArticleDateString;
-                if (lastArticleDateString === undefined || newArticleDate > lastArticleDate) {
+                var lastArticleDate = $("#top-stories-world-articles").last().children().first().data("created-date");
+
+                if (lastArticleDate === undefined || lastArticleDate > newArticleDate) {
                     renderWorldStory(story)
                 }
             })
         }
-    })
-}
-
-function fetchWorldArticlesButton() {
-    $("#fetch-button-world-articles").on("click", function(){
-        getWorldArticles()
     })
 }
 
@@ -45,7 +44,6 @@ function renderWorldStory(story) {
             +"<p>"+story.section+"</p>"
             +"</div>"
             +"</div>"
-
             +"<div class='row'>"
             +"<div class='medium-12 columns top-stories-world-abstract'>"
             +"<p>"+story.abstract+"</p>"
@@ -54,8 +52,6 @@ function renderWorldStory(story) {
             +"<div class='row'>"
             +"<div>"
             +"<a class='button' href='"+story.url+"'>Read More</a>"
-            +"<button id='fetch-button-world-articles' class='button'>Fetch</button>"
-            +"</div>"
             +"</div>"
             +"<hr>"
             +"</div>"
