--- a/app/assets/javascripts/top_stories_nation.js.erb
+++ b/app/assets/javascripts/top_stories_nation.js.erb
@@ -1,6 +1,13 @@
 $(document).ready(function(){
-    getNationArticles()
+    getNationArticles();
+    fetchNationArticlesButton()
 });
+
+function fetchNationArticlesButton() {
+    $("#fetch-newswire-articles").on("click", function() {
+        getNewswireArticles()
+    })
+}
 
 function getNationArticles() {
     $.ajax({
@@ -10,9 +17,9 @@ function getNationArticles() {
             var stories = articles.results;
             $.each(stories, function(index, story){
                 var newArticleDate        = new Date(story.created_date);
-                var lastArticleDateString = $(".story").last().attr("created_date");
-                var lastArticleDate       = new Date(lastArticleDateString);
-                if (lastArticleDateString === undefined || newArticleDate > lastArticleDate) {
+                var lastArticleDate = $(".top-stories-nation-articles").last().children().data("created_date");
+
+                if (lastArticleDate === undefined || lastArticleDate > newArticleDate) {
                     renderNationStory(story)
                 }
             })
@@ -22,11 +29,11 @@ function getNationArticles() {
 
 function renderNationStory(story) {
     $("#top-stories-nation-articles").append(
-            "<div class='top-stories-nation-articles'>"
+            "<div class='top-stories-nation-articles' data-created-date='"+story.created_date+"'>"
             +"<div class='row'>"
             +"<div class='medium-12 columns top-stories-nation-title'>"
             +"<h4>"+story.title+"</h4>"
-            +"<h6>"+story.created_date+"</h6>"
+            +"<h6>"+new Date(story.created_date)+"</h6>"
             +"</div>"
             +"</div>"
             +"<div class='row'>"
@@ -37,7 +44,6 @@ function renderNationStory(story) {
             +"<p>"+story.section+"</p>"
             +"</div>"
             +"</div>"
-
             +"<div class='row'>"
             +"<div class='medium-12 columns top-stories-nation-abstract'>"
             +"<p>"+story.abstract+"</p>"
@@ -46,7 +52,6 @@ function renderNationStory(story) {
             +"<div class='row'>"
             +"<div>"
             +"<a class='button' href='"+story.url+"'>Read More</a>"
-            +"</div>"
             +"</div>"
             +"<hr>"
             +"</div>"
