--- a/app/assets/javascripts/top_stories_technology.js.erb
+++ b/app/assets/javascripts/top_stories_technology.js.erb
@@ -1,6 +1,13 @@
 $(document).ready(function(){
-    getTechnologyArticles()
+    getTechnologyArticles();
+    fetchTechnologyArticlesButton()
 });
+
+function fetchTechnologyArticlesButton() {
+    $("#fetch-technology-articles").on("click", function() {
+        getNewswireArticles()
+    })
+}
 
 function getTechnologyArticles() {
     $.ajax({
@@ -10,9 +17,9 @@ function getTechnologyArticles() {
             var stories = articles.results;
             $.each(stories, function(index, story){
                 var newArticleDate        = new Date(story.created_date);
-                var lastArticleDateString = $(".story").last().attr("created_date");
-                var lastArticleDate       = new Date(lastArticleDateString);
-                if (lastArticleDateString === undefined || newArticleDate > lastArticleDate) {
+                var lastArticleDate = $(".story").last().attr("created_date");
+
+                if (lastArticleDate === undefined || lastArticleDate > newArticleDate) {
                     renderTechnologyStory(story)
                 }
             })
@@ -26,7 +33,7 @@ function renderTechnologyStory(story) {
             +"<div class='row'>"
             +"<div class='medium-12 columns top-stories-technology-title'>"
             +"<h4>"+story.title+"</h4>"
-            +"<h6>"+story.created_date+"</h6>"
+            +"<h6>"+new Date(story.created_date)+"</h6>"
             +"</div>"
             +"</div>"
             +"<div class='row'>"
@@ -37,7 +44,6 @@ function renderTechnologyStory(story) {
             +"<p>"+story.section+"</p>"
             +"</div>"
             +"</div>"
-
             +"<div class='row'>"
             +"<div class='medium-12 columns top-stories-technology-abstract'>"
             +"<p>"+story.abstract+"</p>"
@@ -46,7 +52,6 @@ function renderTechnologyStory(story) {
             +"<div class='row'>"
             +"<div>"
             +"<a class='button' href='"+story.url+"'>Read More</a>"
-            +"</div>"
             +"</div>"
             +"<hr>"
             +"</div>"
