--- a/app/views/nytimes_top_stories_business/index.html.erb
+++ b/app/views/nytimes_top_stories_business/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="large-12 large-centered columns">
       <h1>Top Business Stories</h1>
+        <button id='fetch-business-articles' class='button'>Fetch</button>
     </div>
   </div>
 
