--- a/app/assets/javascripts/top_stories_business.js.erb
+++ b/app/assets/javascripts/top_stories_business.js.erb
@@ -17,7 +17,7 @@ function getBusinessArticles() {
             var stories = articles.results;
             $.each(stories, function(index, story){
                 var newArticleDate        = story.created_date;
-                var lastArticleDate = $(".top-stories-business-articles").last().children().data("created-date");
+                var lastArticleDate = $(".top-stories-business-articles").last().data("created-date");
 
                 if (lastArticleDate === undefined || lastArticleDate > newArticleDate) {
                     renderBusinessStory(story)
@@ -53,6 +53,13 @@ function renderBusinessStory(story) {
             +"<div>"
             +"<a class='button' href='"+story.url+"'>Read More</a>"
             +"</div>"
+            +"<div>"
+            +"<img src=https://maps.googleapis.com/maps/api/staticmap?center="
+            +story.geo_facet
+            +"&zoom=4&size=300x300&maptype=roadmap&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C"
+            +story.geo_facet
+            +"&key=<%= ENV['google_static_maps_api_key'] %>"
+            +">"
             +"<hr>"
             +"</div>"
     );
