--- a/app/assets/javascripts/top_stories_nation.js.erb
+++ b/app/assets/javascripts/top_stories_nation.js.erb
@@ -16,8 +16,8 @@ function getNationArticles() {
         success: function(articles){
             var stories = articles.results;
             $.each(stories, function(index, story){
-                var newArticleDate        = new Date(story.created_date);
-                var lastArticleDate = $(".top-stories-nation-articles").last().children().data("created_date");
+                var newArticleDate        = story.created_date;
+                var lastArticleDate = $(".top-stories-nation-articles").last().data("created-date");
 
                 if (lastArticleDate === undefined || lastArticleDate > newArticleDate) {
                     renderNationStory(story)
@@ -53,6 +53,13 @@ function renderNationStory(story) {
             +"<div>"
             +"<a class='button' href='"+story.url+"'>Read More</a>"
             +"</div>"
+            +"<div>"
+            +"<img src=https://maps.googleapis.com/maps/api/staticmap?center="
+            +story.geo_facet
+            +"&zoom=4&size=300x300&maptype=roadmap&markers=size:mid%7Ccolor:0xff0000%7Clabel:1%7C"
+            +story.geo_facet
+            +"&key=<%= ENV['google_static_maps_api_key'] %>"
+            +">"
             +"<hr>"
             +"</div>"
     );
